--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,8 @@
-body {background: #000;}
+/* Core Style Setup */
+@import "reset";
+@import "variables";
+@import "globals";
+/* Theme Regions */
+@import "header";
+@import "homepage";
+@import "footer";
