--- a/page--front.html.twig
+++ b/page--front.html.twig
@@ -5,7 +5,7 @@
 </header>
 
 <div class="wrapper">
-  <section role="main">
+  <section class="cf" role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
     <div class="wrapper">
