--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,8 @@
 @import "normalized";
 @import "global";
 @import "fonts";
+
+/* regions styles */
+@import "header";
+@import "content";
+@import "footer";
