--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,31 +1,30 @@
-header{
+header {
 	padding: 0.9rem;
-    background: #fff9f7;
-    color: black;
-    a{
-        color: black;
-        text-decoration: none;
-		}
+    background: #131313;
+    color: #f1ffff;
+  
 		.branding {
-    max-width: 30%;
-    display: block;  
+    max-width: 60%;
+    display: inline-table;  
 		margin: 0;
-		float: left;
-		text-transform: uppercase;
+    float: left;
+    text-transform: uppercase;
+      a{
+        color:#f1ffff;
+      }
 		}
-	nav{float: right;}
-		.main-navigation {
-			margin:0;
-			padding: 0;
-			li{text-decoration: none;
-			}
 			a {
-			color: gold;
-			font-weight: 600;
-			display: block;
-		    }
-			
-		}
-		
-		
+			color: #ffd700;
+			font-weight: bold;
+      display: block;
+      text-decoration: none;
+      }	
+      .main-navigation { 
+        max-width: 32%;
+        display: inline-table;
+        margin-left: 15rem;
+        li{
+          list-style: none;
+        }
+      }	
 }
