--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ template {
 body {
   background: #f0f1f1;
   font-family: 'Open Sans', sans-serif;
-  color: #000;
+  color: #131313;
 }
 
 /* line 6, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_global.scss */
@@ -527,54 +527,58 @@ img {
 /* line 1, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
 header {
   padding: 0.9rem;
-  background: #fff9f7;
-  color: black;
+  background: #131313;
+  color: #f1ffff;
 }
 
-/* line 5, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
-header a {
-  color: black;
-  text-decoration: none;
-}
-
-/* line 9, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
+/* line 6, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
 header .branding {
-  max-width: 30%;
-  display: block;
+  max-width: 60%;
+  display: inline-table;
   margin: 0;
   float: left;
   text-transform: uppercase;
 }
 
+/* line 12, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
+header .branding a {
+  color: #f1ffff;
+}
+
 /* line 16, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
-header nav {
-  float: right;
-}
-
-/* line 17, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
-header .main-navigation {
-  margin: 0;
-  padding: 0;
-}
-
-/* line 20, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
-header .main-navigation li {
+header a {
+  color: #ffd700;
+  font-weight: bold;
+  display: block;
   text-decoration: none;
 }
 
 /* line 22, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
-header .main-navigation a {
-  color: gold;
-  font-weight: 600;
-  display: block;
+header .main-navigation {
+  max-width: 32%;
+  display: inline-table;
+  margin-left: 15rem;
+}
+
+/* line 26, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_header.scss */
+header .main-navigation li {
+  list-style: none;
 }
 
 /* line 1, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_content.scss */
 .board {
-  background: orangered;
+  background: #131313;
+  color: #f1ffff;
   height: 100vh;
   background-size: cover;
   background-position: center;
+}
+
+/* line 7, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_content.scss */
+.board a {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
 }
 
 /* line 1, /Applications/MAMP/htdocs/workspace/dplocal/themes/custom/kubicue/sass/_footer.scss */
