--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,6 +1,8 @@
 .board{
-background: orangered;
+background:#131313;
+color:#f1ffff;
 height: 100vh;
 background-size: cover;
 background-position: center;
+ a{color: white; text-decoration: none; font-weight: 400;}
 }
