--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -61,22 +61,11 @@
   <main role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
-    <div class="layout-content">
-      {{ page.content }}
-    </div>{# /.layout-content #}
-
-    {% if page.sidebar_first %}
-      <aside class="layout-sidebar-first" role="complementary">
-        {{ page.sidebar_first }}
-      </aside>
-    {% endif %}
-
-    {% if page.sidebar_second %}
-      <aside class="layout-sidebar-second" role="complementary">
-        {{ page.sidebar_second }}
-      </aside>
-    {% endif %}
-
+    <div class="board">
+		<section class="container wrapper" role="main">
+     {{ page.content }}</div>
+    </section>
+		</div>{# /.board #}
   </main>
 
   {% if page.footer %}
